# boxctl

./: .gitattributes  .gitignore  .nvim.lua  README.md  boxctl.cabal  cabal.project  flake.nix  mise.toml
.zed/: settings.json
app/: Main.hs
src/Boxctl/: API.hs  CLI.hs  Command.hs  Domain.hs  Error.hs  Instance.hs  Output.hs  Tailscale.hs  Terminal.hs
